force-app/main/default/objects/LippertComponentCode__e/LippertComponentCode__e.object-meta.xml
<CustomObject>
    <label>LippertComponentCode</label>
    <pluralLabel>LippertComponentCodes</pluralLabel>
</CustomObject>