force-app/main/default/objects/LippertComponentCode__e/fields/DTC_Code__c.field-meta.xml
<CustomField>
    <fullName>DTC_Code__c</fullName>
    <label>DTC Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>