force-app/main/default/objects/LippertComponentCode__e/fields/DTC_Type__c.field-meta.xml
<CustomField>
    <fullName>DTC_Type__c</fullName>
    <label>DTC Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>