force-app/main/default/objects/LippertComponentCode__e/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the code's error condition was still active at the time the event was published</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>