force-app/main/default/objects/LippertComponentCode__e/fields/isStored__c.field-meta.xml
<CustomField>
    <fullName>isStored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the code's situation is stored on the device for later review</description>
    <label>isStored</label>
    <type>Checkbox</type>
</CustomField>