force-app/main/default/objects/LippertComponentCode__e/fields/Power_Cycled__c.field-meta.xml
<CustomField>
    <fullName>Power_Cycled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the power was cycled.  Updates the counter</description>
    <label>Power Cycled</label>
    <type>Checkbox</type>
</CustomField>