force-app/main/default/objects/LippertComponentCode__e/fields/ProductUniqueID__c.field-meta.xml
<CustomField>
    <fullName>ProductUniqueID__c</fullName>
    <label>ProductUniqueID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>